# retail-location-strategy

./: .gitignore  LICENSE  Makefile  pyproject.toml  session.json  sub-agent-dev.md
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/copilotkit/: route.ts
notebook/: gap_analysis_code.ipynb
retail_location_strategy/: agent.py  config.py  main.py  prompt.py  prompts.py  trace.py
retail_location_strategy/sub_agents/competitor_analysis/: agent.py  callbacks.py  prompt.py
retail_location_strategy/sub_agents/format_report/: agent.py  callbacks.py  prompt.py
retail_location_strategy/sub_agents/gap_analysis/: agent.py  callbacks.py  prompt.py
retail_location_strategy/sub_agents/gap_analysis/sandbox/: docker_build.sh  dockerfile
retail_location_strategy/sub_agents/infographic_generator/: agent.py  callbacks.py  prompt.py
retail_location_strategy/sub_agents/intake_agent/: agent.py  callbacks.py  prompt.py
retail_location_strategy/sub_agents/market_research/: agent.py  callbacks.py  prompt.py
retail_location_strategy/sub_agents/report_generator/: agent.py  callbacks.py  prompt.py
retail_location_strategy/sub_agents/strategy_advisor/: agent.py  callbacks.py  prompt.py  schema.py
retail_location_strategy/tools/: competitor_data.py  overpass_search.py  query_results.py  searxng_search.py  web_scraper.py
sub_agent_harness/: harness.py  session.json  session1.json  session2.json  session3.json  test_gap_analysis.py  test_infographic_generator.py  test_report_generator.py  test_strategy_advisor.py  utils.py
